# gtkparasite

./: README  autogen.sh  configure.ac
src/: Makefile.am  inspect-button.c  module.c  parasite.h  property-cell-renderer.c  style-list.c  style-list.h  widget-tree.c  window.c
